--- a/W7D1/package.json
+++ b/W7D1/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "widget",
+  "name": "W7D1",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "webpack": "webpack --watch"
-
   },
   "keywords": [],
   "author": "",
@@ -16,8 +15,11 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "react": "^16.1.0",
-    "react-dom": "^16.1.0",
+    "lodash": "^4.17.4",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2",
     "webpack": "^3.8.1"
   }
 }
